Chore: Fix vulnerabilities and increase package versions

--- a/package.json
+++ b/package.json
@@ -32,9 +32,12 @@
   ],
   "devDependencies": {
     "globals": "^15.12.0",
-    "lerna": "^8.1.9"
+    "lerna": "^9.0.3"
   },
   "optionalDependencies": {
     "@nx/nx-linux-x64-gnu": "^20.1.0"
+  },
+  "overrides": {
+    "tar": "^7.5.6"
   }
 }
